--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "@tryretool/retool-embed-client",
+    "name": "@tryretool/retool-embed",
     "version": "0.1.0",
     "private": false,
     "respository": {
         "type": "git",
-        "url": "https://github.com/tryretool/retool-embed-client"
+        "url": "https://github.com/tryretool/retool-embed"
     },
     "licenses": [
         {
@@ -16,7 +16,7 @@
         "retool",
         "embed-retool"
     ],
-    "description": "A client for embedding Retool apps in your existing web app",
+    "description": "A JavaScript SDK for embedding Retool apps.",
     "devDependencies": {
         "@babel/cli": "^7.18.6",
         "@babel/core": "^7.18.6",
@@ -35,6 +35,6 @@
         "build": "npm run build:types && npm run build:js",
         "build:types": "tsc --emitDeclarationOnly",
         "build:js": "babel src --out-dir dst --extensions \".ts,.tsx\" --source-maps inline",
-        "build:npm": "rm -rf dst && mkdir dst && npm run build -d dst --copy-files && mv ./dst/createRetoolEmbedClient.js ./dst/index.js && cp ./package.json ./dst/package.json && cp ./README.md ./dst/README.md && rm -rf ./dst/__tests__"
+        "build:npm": "rm -rf dst && mkdir dst && npm run build -d dst --copy-files && mv ./dst/createRetoolEmbed.js ./dst/index.js && cp ./package.json ./dst/package.json && cp ./README.md ./dst/README.md && rm -rf ./dst/__tests__"
     }
 }
